<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Makeys</string>
    <string name="hello_blank_fragment">你好</string>
    <string name="loaddings">努力加载...</string>
    <string name="scan_text">请将二维码对准取景框</string>
    <string name="start_btn">开始</string>
    <string name="cancel_btn">取消</string>
    <string name="fingerprint_success">指纹识别成功</string>
    <string name="fingerprint_not_recognized">再试一次</string>
    <string name="no_sensor_dialog_title">没有指纹传感器</string>
    <string name="no_sensor_dialog_message">在你的设备上没有指纹传感器,点击取消退出.</string>
    <string name="no_fingerprint_enrolled_dialog_title">请去系统设置开启指纹</string>
    <string name="ok_btn_dialog">OK</string>
    <string name="cancel_btn_dialog">取消</string>
    <string name="setti">您未设置过手势密码</string>
    <string name="AcquiredGood_warning">获得的图像很好.</string>
    <string name="AcquiredImageDirty_warning">再试一次</string>
    <string name="AcquiredInsufficient_warning">再试一次</string>
    <string name="AcquiredPartial_warning">再试一次</string>
    <string name="AcquiredTooFast_warning">再试一次</string>
    <string name="AcquiredToSlow_warning">再试一次</string>
    <string name="ErrorCanceled_warning">请稍后再试</string>
    <string name="ErrorHwUnavailable_warning">指纹验证不可用</string>
    <string name="ErrorLockout_warning">指纹验证已关闭</string>
    <string name="ErrorTimeout_warning">再试一次</string>
    <string name="ErrorUnableToProcess_warning">再试一次</string>
    <string name="ErrorNoSpace_warning">再试一次</string>
    <string name="ErrorNoSpace_zai">请稍后再试</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="tag_hint">Tag为大小写字母,数字,下划线,中文, 多个用以逗号分隔</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="setting_error">指纹初始化失败!再试一次!</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="loading">数据加载中...</string>
    <string name="title1">安全邮箱</string>
    <string name="title2">修改登录密码</string>
    <string name="title3">密码安全</string>
    <string name="title4">修改支付密码</string>
    <string name="title5">更换密保手机</string>
    <string name="title6">选择地区和国家</string>
    <string name="title7">设备管理</string>
    <string name="title8">指纹保护</string>
    <string name="title9">账户足迹</string>
    <string name="title10">手势锁设置</string>
    <string name="title11">关于</string>
    <string name="title12">语言</string>
    <string name="title13">账号登录</string>
    <string name="title14">账户安全管家</string>
    <string name="title15">操作记录</string>
    <string name="title16">身份认证</string>
    <string name="title16a">实名信息</string>
    <string name="title17">扫码认证</string>
    <string name="title18">安全手机</string>
    <string name="title19">设置实名信息</string>
    <string name="title20">短信验证</string>
    <string name="title21">欢迎回来</string>
    <string name="title22">一键锁号</string>
    <string name="title23">绑定新手机</string>
    <string name="title24">探索</string>
    <string name="title25">信用卡实名</string>
    <string name="lock1">请再次绘制解锁图案</string>
    <string name="lock2">与上一次绘制不一致，请重新绘制</string>
    <string name="lock3">你还未开启手势密码</string>
    <string name="lock4">手势启动密码已设置</string>
    <string name="lock5">安全锁手势密码未开启</string>
    <string name="lock6">手势锁已关闭</string>
    <string name="lock7">密码错误,还可以再输入</string>
    <string name="lock8">次</string>
    <string name="lock9">两次输入的密码不一致</string>
    <string name="lock10">手势启动密码未开启</string>
    <string name="lock11">已开启指纹验证</string>
    <string name="lock12">连接至少4个点，请重新设定!</string>
    <string name="main1">安全保护</string>
    <string name="main2">已开启</string>
    <string name="main3">未开启</string>
    <string name="main4">账户安全</string>
    <string name="main5">手势锁</string>
    <string name="main6">指纹锁</string>
    <string name="main7">语言</string>
    <string name="main8">关于</string>
    <string name="main9">退出当前账户</string>
    <string name="main10">暂未授权</string>
    <string name="main11">已关闭</string>
    <string name="main12">探索</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"$%^*()\|~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="china">中国</string>
    <string name="button">确定</string>
    <string name="login">确定</string>
    <string name="tishi1">请输入原安全邮箱</string>
    <string name="tishi2">请验证原登录密码</string>
    <string name="tishi3">6-18位新登录密码，区分大小写</string>
    <string name="tishi3a">6-18位新支付密码，区分大小写</string>
    <string name="tishi4">请确认新登录密码</string>
    <string name="tishi4a">请确认新支付密码</string>
    <string name="tishi5">账户存在严重风险</string>
    <string name="tishi6">请尽快修改密码</string>
    <string name="tishi5a">密码安全</string>
    <string name="tishi6a">账户密码安全等级较高\n请继续保持,并定期更新密码</string>
    <string name="tishi7a">修改密码</string>
    <string name="tishi7">修改登录密码</string>
    <string name="tishi8">修改支付密码</string>
    <string name="tishi8a">重置支付密码</string>
    <string name="tishi9">请验证原支付密码</string>
    <string name="tishi10">请输入验证码</string>
    <string name="tishi11">获取验证码</string>
    <string name="tishi12">下一步</string>
    <string name="tishi12a">下一步</string>
    <string name="tishi13">国家 / 地区</string>
    <string name="tishi14">请输入新手机号</string>
    <string name="tishi15">如果原密保手机已换号或不能接收到短信验证码，需提供一个能收验证码的新手机号和个人实名有效资料提交工作人员审核通过后才能更换新密保手机</string>
    <string name="tishi16">请输入手机号</string>
    <string name="tishi16c">请输入登录邮箱</string>
    <string name="tishi16a">请输入姓名</string>
    <string name="tishi16b">请输入证件号码</string>
    <string name="tishi16d">请输入账户</string>
    <string name="tishi16e">请验证账户</string>
    <string name="tishi17">拍照</string>
    <string name="tishi18">从相册选择</string>
    <string name="tishi19">验证密保手机</string>
    <string name="tishi20">输入国家名查询</string>
    <string name="tishi21">已授权设备</string>
    <string name="tishi22">暂无授权设备</string>
    <string name="tishi23">当前登录</string>
    <string name="tishi24">最近登录记录</string>
    <string name="tishi25">启用手势锁后，他人在使用您手机时无密码将无法打开安全账户中心</string>
    <string name="tishi26">请绘制原手势密码</string>
    <string name="tishi26b">请验证解锁图案</string>
    <string name="tishi26c">请验证手势密码</string>
    <string name="tishi26a">请绘制解锁图案</string>
    <string name="tishi26d">请重新验证解锁图案</string>
    <string name="tishi27">检查新版本</string>
    <string name="tishi28">去评价</string>
    <string name="tishi29">授权登录</string>
    <string name="tishi30">正在请求网页登录</string>
    <string name="tishi31">为了确保账户安全，请确认是本人操作</string>
    <string name="tishi32">确认授权</string>
    <string name="tishi33">拒绝授权</string>
    <string name="tishi34">支持语言</string>
    <string name="tishi35">中文(简体)</string>
    <string name="tishi36">中文(台灣)</string>
    <string name="tishi37">English</string>
    <string name="tishi38">ภาษาไทย</string>
    <string name="tishi39">安全锁手势密码已启动</string>
    <string name="tishi40">定期修改手势密码有效的保护账户安全</string>
    <string name="tishi41">修改手势启动密码</string>
    <string name="tishi42">删除手势启动密码</string>
    <string name="tishi43">请输入登录密码</string>
    <string name="tishi43a">请输入支付密码</string>
    <string name="tishi44">找回密码</string>
    <string name="tishi45">请再次输入密码</string>
    <string name="tishi46">立即设置</string>
    <string name="tishi47">暂未设置实名信息</string>
    <string name="tishi48">实名信息已设置</string>
    <string name="tishi48a">资料已提交</string>
    <string name="tishi48b">实名认证失败</string>
    <string name="tishi48c">认证完成</string>
    <string name="tishi48d">实名信息认证后无法更改</string>
    <string name="tishi48e">请耐心等待后台工作人员审核</string>
    <string name="tishi48f">未按要求上传,请按比例要求重新上传</string>
    <string name="tishi48g">恭喜你资料通过实名审核</string>
    <string name="tishi48h">重新认证</string>
    <string name="tishi48i">个人有效证件</string>
    <string name="tishi49">更换</string>
    <string name="tishi50">当前绑定的安全邮箱</string>
    <string name="tishi51">如果当前手机已换号，请及时更换</string>
    <string name="tishi52">未开启保护，系统将默认禁止对该系统的授权</string>
    <string name="tishi53">证件信息</string>
    <string name="tishi54">证件类型</string>
    <string name="tishi55">姓名</string>
    <string name="tishi56">证件号码</string>
    <string name="tishi57">有效期</string>
    <string name="tishi57a">证件开始日期</string>
    <string name="tishi57b">证件结束日期</string>
    <string name="tishi58">已换号</string>
    <string name="tishi59">切换验证方式</string>
    <string name="tishi60">指纹锁不可用</string>
    <string name="tishi60a">手势密码不可用</string>
    <string name="tishi61">已设置</string>
    <string name="tishi62">未设置</string>
    <string name="tishi63">暂未认证</string>
    <string name="tishi64">点击登录</string>
    <string name="tishi64a">Touch-ID </string>
    <string name="tishi65">下线</string>
    <string name="tishi66">请补全原绑定安全邮箱：</string>
    <string name="tishi67"></string>
    <string name="tishia68">请设置</string>
    <string name="tishia68a">请设置</string>
    <string name="tishi68">的新登录密码,建议使用数字、字母、字符的组合密码，提高密码安全等级</string>
    <string name="tishi68a">的新支付密码,建议使用数字、字母、字符的组合密码，提高密码安全等级</string>
    <string name="tishi69">请验证原绑定手机号:</string>
    <string name="tishi70">账户安全中心</string>
    <string name="tishi71">请检查网络或GPS是否打开</string>
    <string name="tishi72">服务器异常</string>
    <string name="tishi73">输入正确</string>
    <string name="tishi74">请输入有效手机号</string>
    <string name="tishi75">秒后重发</string>
    <string name="tishi76">重新获取</string>
    <string name="tishi77">输入正确</string>
    <string name="tishi78">当前绑定的密保手机：</string>
    <string name="tishi79">安全锁的ID</string>
    <string name="tishi80">通过指纹键验证已有手机指纹</string>
    <string name="tishi80a">请验证指纹</string>
    <string name="tishi81">您的账号已在另一台设备登录</string>
    <string name="tishi82">提示</string>
    <string name="tishi83">数据获取失败</string>
    <string name="tishi84">切换数据</string>
    <string name="tishi85">账户登陆密码已修改，请重新登陆</string>
    <string name="tishi85a">账户支付密码已修改，请重新登陆</string>
    <string name="tishi86">授权时间：</string>
    <string name="tishi87">最近登陆：</string>
    <string name="tishi88">验证手势密码</string>
    <string name="tishi89">当前绑定的安全邮箱</string>
    <string name="tishi90">更换安全邮箱</string>
    <string name="tishi91">请输入您的安全邮箱</string>
    <string name="tishi92">请验证你的指纹</string>
    <string name="tishi93">资料已提交</string>
    <string name="tishi94">请耐心等待后台人员审核</string>
    <string name="tishi95">重新登录</string>
    <string name="tishi96">已开启</string>
    <string name="tishi97">类授权保护</string>
    <string name="tishi98">未开启账户授权保护</string>
    <string name="tishi99">删除</string>
    <string name="tishi100">确定退出账号</string>
    <string name="tishi101">下线通知</string>
    <string name="tishi102">您的账号于</string>
    <string name="tishi103">在另外一台设备登陆</string>
    <string name="tishi104">\n如非本人操作,请及时修改密码或者重新登陆</string>
    <string name="tishi105">关闭对“</string>
    <string name="tishi105a">开启对“</string>
    <string name="tishi106">”的所有授权?</string>
    <string name="tishi107">当前已是最新版本</string>
    <string name="tishi108">已冻结平台</string>
    <string name="tishi109">新密码不能和旧密码相同</string>
    <string name="tishi110">暂无数据</string>
    <string name="tishi140">守护安全 保障资产</string>
    <string name="tishi164">认证信用卡</string>
    <string name="tishi165">信用卡认证完成</string>
    <string name="tishi166">您认证的卡号为：</string>
    <string name="tishi167">提交实名资料</string>
    <string name="tishi170">信用卡实名认证</string>
    <string name="tishi171">1、认证过程统一在财团法人联合信用卡处理中心完成，充分保障信用卡信息安全。\n\n2、认证过程产生的1块台币，将会在认证完成后返回到对应的信用卡。\n\n3、请确认使用本人的信用卡进行认证，冒用他们人信用卡认证将作封号处理。</string>
</resources>