<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/bg_title1"/>
    <RelativeLayout
        style="@style/Title"
        android:background="@color/bg_title1">
        <include
            android:id="@+id/back"
            layout="@layout/layout_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main5"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/xian"
            android:background="@color/xian1"
            android:layout_marginLeft="@dimen/xian_left"
            android:layout_marginRight="@dimen/xian_right"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/shoushi"/>
        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text00"
            android:textColor="@color/text_blue"
            android:text="@string/tishi39"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/text02"
            android:textColor="@color/text02"
            android:text="@string/tishi40"/>
        <TextView
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginRight="20dp"
            android:text="@string/tishi41"
            android:layout_marginTop="25dp"
            android:background="@drawable/yuanjiaolan2"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/title"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginRight="20dp"
            android:text="@string/tishi42"
            android:layout_marginTop="15dp"
            android:background="@drawable/yuanjiaolan2"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/title"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
