<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg1"
    android:gravity="center_horizontal"
    tools:context="com.example.duan.chao.DCZ_activity.PersonDataActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/bg_title1"/>
    <RelativeLayout
        style="@style/Title"
        android:background="@color/bg_title1">
        <include
            android:id="@+id/back"
            layout="@layout/layout_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title25"
            android:textColor="@color/text_title1"
            android:textSize="@dimen/title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/xian"
            android:background="@color/xian1"
            android:layout_marginLeft="@dimen/xian_left"
            android:layout_marginRight="@dimen/xian_right"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/di"
            android:orientation="horizontal">
            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#303745">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#303745"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tishi140"/>
            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#303745">
            </View>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="40dp"
                android:src="@mipmap/tw_ok"/>
            <TextView
                android:id="@+id/state_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/tishi165"/>
            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text00"
                android:text="@string/tishi166"/>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:visibility="gone"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text02"
                android:textSize="@dimen/text00"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:text="@string/tishi47"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right">

                <TextView
                    android:id="@+id/button_hui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/yuanjiaohui"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/button"
                    android:textColor="@color/text02"
                    android:textSize="@dimen/title" />

                <TextView
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/yuanjiaolan"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tishi167"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="70dp"
                android:textSize="17sp"
                android:text="@string/tishi170"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/xian"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="16sp"
                android:text="@string/tishi171"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/yuanjiaolan"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tishi164"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
