<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="com.example.duan.chao.DCZ_activity.ChangePasswordActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/bg_title1"/>
    <RelativeLayout
        style="@style/Title"
        android:background="@color/bg_title1">
        <include
            android:id="@+id/back"
            layout="@layout/layout_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title3"
            android:textColor="@color/text_title1"
            android:textSize="@dimen/title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/xian"
            android:background="@color/xian1"
            android:layout_marginLeft="@dimen/xian_left"
            android:layout_marginRight="@dimen/xian_right"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/di"
            android:visibility="gone"
            android:orientation="horizontal">
            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#303745">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#303745"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/tishi140"/>
            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#303745">
            </View>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/left"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/anquan1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tishi5a"
                android:textColor="@color/text09"
                android:visibility="gone"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/tishi6a"
                android:gravity="center_horizontal"
                android:textColor="@color/text07"
                android:textSize="@dimen/text02" />

            <TextView
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/yuanjiaolan2"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/tishi7"
                android:textColor="@color/white"
                android:textSize="@dimen/title" />

            <TextView
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/yuanjiaolan2"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/tishi8"
                android:textColor="@color/white"
                android:textSize="@dimen/title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/yuanjiaolan2"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/tishi8a"
                android:textColor="@color/white"
                android:textSize="@dimen/title"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></View>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
