<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg1"
    tools:context="com.example.duan.chao.DCZ_activity.SmsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/bg_title1"/>
    <RelativeLayout
        style="@style/Title"
        android:background="@color/bg_title1">
        <include
            android:id="@+id/back"
            layout="@layout/layout_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title20"
            android:textColor="@color/text_title1"
            android:textSize="@dimen/title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/xian"
            android:background="@color/xian1"
            android:layout_marginLeft="@dimen/xian_left"
            android:layout_marginRight="@dimen/xian_right"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tishi10"
            android:maxLength="8"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text06"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text01" />
        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yuanjiaolan2"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="7dp"
            android:text="@string/tishi11"
            android:textColor="@color/white"
            android:textSize="@dimen/text02" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/left"
            android:paddingRight="@dimen/right">

            <TextView
                android:id="@+id/button_hui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/yuanjiaohui"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/button"
                android:textColor="@color/text02"
                android:textSize="@dimen/title" />

            <TextView
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/yuanjiaolan2"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/button"
                android:textColor="@color/white"
                android:textSize="@dimen/title"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/tishi58"
            android:textColor="@color/text05"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/xian2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xian"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/right"
        android:background="@color/xian2" />

</LinearLayout>
